<resources>
    <string name="app_name">HappyRide</string>

    <string name="from_where">From where?</string>
    <string name="where_to">Where to?</string>
    <string name="show_offers">Show Rides</string>
    <string name="show_active_rides">Active Rides</string>

    <!--Enter rides details view commit-->
    <string name="suitcases">Suitcases</string>
    <string name="more">More</string>
    <string name="passengers">Passengers</string>
    <string name="ride_details">Ride Details</string>
    <string name="note_for_driver">Notes for the driver</string>
    <string name="ride_details_hint_phone">Phone Number *</string>
    <string name="ride_details_hint_name">Name *</string>
    <string name="your_details">Your details</string>
    <string name="fill_mandatory_fields">Please fill in all mandatory fields</string>
    <string name="ride_options">Ride Options</string>

    <string name="eta">eta</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="book">Book</string>

    <string name="booked">Booked</string>
    <string name="not_available_initial">N/A</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="leave_now">Leave now</string>
    <string name="leave_later">Set your departure time</string>
    <string name="invalid_prebooking_time">Please select pre-booking date that is at least 30 minutes from now</string>
    <string name="prebook_time_picker_title">Must be at least 30 minutes from now</string>

    <string name="autocomplete_title">Autocomplete</string>
    <string name="show_offers_title">Show Rides</string>
    <string name="ride_status_title">Ride Status</string>
    <string name="public_transport_details">Details</string>
    <string name="public_transport">Public Transport</string>
    <string name="active_rides">Active Rides</string>
    <string name="error_no_ride_options_results">No results found. Please try to search a ride again.</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="register_not_valid_user_name">User name is mandatory for registration</string>
    <string name="enter_user_name">Enter user name</string>

    <string name="home_discover">Discover</string>
    <string name="home_my_trips">My Trips</string>
    <string name="home_account">Account</string>
    <string name="home_title">London</string>


    <string name="offer_button">Select</string>


    <string name="order_button">Book a Happy Ride</string>
    <string name="order_title">Order Ride</string>
    <string name="order_search_hint">Enter your pickup address</string>
    <string name="order_continue">continue</string>

    <string name="market_place_title">Pick your HappyRide</string>


    <string name="confirmation_title">Yay!</string>
    <string name="confirmation_subtitle">You just got yourself a HappyRide!</string>
    <string name="confirmation_order_number">Order #%1$s</string>
    <string name="confirmation_calender">Add To Calendar</string>

    <string name="camera_permission">ARView needs access to camera.</string>
    <string name="external_permission">ARView needs access to external storage.</string>

    <string name="stickers_save">share</string>
    <string name="title_activity_concert">ConcertActivity</string>

</resources>
