<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nil.test.sdk.sampleapp.happy_ride.OrderConfirmationActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/confirmation_camera_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pic_confrimaton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="24dp"
        />


    <TextView
        android:id="@+id/confirmation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#303030"
        android:lineSpacingExtra="8sp"
        android:text="@string/confirmation_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_camera_image"
        android:layout_marginTop="48dp"
        />


    <TextView
        android:id="@+id/confirmation_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#303030"
        android:lineSpacingExtra="8sp"
        android:text="@string/confirmation_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_title"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/confirmation_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#303030"
        android:lineSpacingExtra="8sp"
        android:text="@string/confirmation_order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_subtitle"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        tools:text="Order #574382"
        />

    <Button
        android:id="@+id/confirmation_calender"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="4sp"
        android:theme="@style/LargeButtonPurple"
        android:text="@string/confirmation_calender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/views_margin"/>


</android.support.constraint.ConstraintLayout>
